<package>
  <name>rqt_robot_plugins</name>
  <version>0.2.9</version>
  <description>Metapackage of rqt plugins for use with robots.</description>
  <maintainer email="ablasdel@willowgarage.com">Aaron Blasdel</maintainer>
  <maintainer email="isao.saito@mavs.uta.edu">Isaac Saito</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_robot_plugins</url>
  <url type="repository">https://github.com/ros-visualization/rqt_robot_plugins</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_robot_plugins/issues</url>

  <author>Dirk Thomas</author>
  <author email="ablasdel@willowgarage.com">Aaron Blasdel</author>
  <author>Dorian Scholz</author>
  <author>Ze'ev Klapow</author>
  <author>Isaac Saito</author>

  <run_depend>rqt_nav_view</run_depend>
  <run_depend>rqt_pose_view</run_depend>
  <run_depend>rqt_robot_dashboard</run_depend>
  <run_depend>rqt_robot_monitor</run_depend>
  <run_depend>rqt_robot_steering</run_depend>
  <run_depend>rqt_runtime_monitor</run_depend>
  <run_depend>rqt_rviz</run_depend>
  <!--<run_depend>rqt_tf_tree</run_depend>-->

  <export>
    <metapackage/>
  </export>
</package>
